samples/_failures_safe/1761247891_b26e83_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0dcca8b8.c: In function ‘main’:
./samples/SAFE/__tmp_0dcca8b8.c:157:17: error: expected expression at end of input
  157 |                 if (add_matrices(&a, &b, &result) ==
      |                 ^~
./samples/SAFE/__tmp_0dcca8b8.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0dcca8b8.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0dcca8b8.c:157:17: error: expected declaration or statement at end of input
